--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arcane Mirage Player - Vector Integration</title>
-    <script defer src="https://embed.arcanemirage.com/528f8edc-dc5b-486d-a10f-87aa0bc2a368/e"></script>
+    <script defer src="https://embed.arcanemirage.com/b588c220-e197-43eb-bc88-c10bf8b284d7/e"></script>
 </head>
 <body style="margin: 0; text-align: center;">
 
@@ -13,9 +13,9 @@
 
     <div id="am-container" style="width: 640px; height: 480px; margin: auto; border: 1px solid black;">
         <div id="arcane-player"
-            data-project-id="5554"
-            data-project-key="528f8edc-dc5b-486d-a10f-87aa0bc2a368"
-            data-token="4OfCQ1to3g_k"
+            data-project-id="5556"
+            data-project-key="b588c220-e197-43eb-bc88-c10bf8b284d7"
+            data-token="kOGGWzuSaFIi"
             data-enable-events-passthrough="true">
         </div>
     </div>
