--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <div id="am-container" style="width: 640px; height: 480px; margin: auto; border: 1px solid black;">
         <div id="arcane-player"
-            data-project-id="5556"
-            data-project-key="b588c220-e197-43eb-bc88-c10bf8b284d7"
-            data-token="kOGGWzuSaFIi"
+            data-project-id="5557"
+            data-project-key="a51a6e3b-94e9-47ee-83bb-abb7d12fac8c"
+            data-token="w2nPp1pnwfd8"
             data-enable-events-passthrough="true">
         </div>
     </div>
