--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 
             if (vectorParam) {
                 console.log("✅ Extracted Vector Parameter:", vectorParam);
+                // Clean up the vector format from (X=1050,Y=8310,Z=100) to (X: 1050, Y: 8310, Z: 100)
+                const cleanedVector = vectorParam.replace(/=/g, ":").replace(/,/g, ", ");
+                console.log("✅ Cleaned Vector Parameter:", cleanedVector);
+
+                // Send the cleaned vector to Unreal
+                window.ArcanePlayer.emitUIEvent({
+                    event: "CustomUIEvent",
+                    data: { value: cleanedVector }
+                });
+                console.log("📤 Sent vector data to Unreal Engine:", cleanedVector);
             } else {
                 console.warn("⚠️ No vector parameter found in URL.");
             }
@@ -44,22 +54,12 @@
                         console.log("✅ Arcane Mirage Player is fully loaded! Now sending vector data to Unreal...");
                         document.getElementById("status").innerText = "Arcane Mirage is Ready.";
 
-                        if (vectorParam) {
-                            // Send the extracted vector parameter to Unreal Engine
-                            window.ArcanePlayer.emitUIEvent({
-                                event: "CustomUIEvent",
-                                data: { value: vectorParam }
-                            });
-                            console.log("📤 Sent vector data to Unreal Engine:", vectorParam);
-                        }
+                        // Vector data is already sent above, now listen for Unreal Engine's response
+                        window.ArcanePlayer.onReceiveEvent("CustomUIEventResponse", (response) => {
+                            console.log("🔄 Response from Unreal Engine:", response);
+                            document.getElementById("status").innerText = "Response from UE: " + response;
+                        });
                     });
-
-                    // Listen for Unreal Engine's response
-                    window.ArcanePlayer.onReceiveEvent("CustomUIEventResponse", (response) => {
-                        console.log("🔄 Response from Unreal Engine:", response);
-                        document.getElementById("status").innerText = "Response from UE: " + response;
-                    });
-
                 } else {
                     setTimeout(waitForArcanePlayer, 500);
                 }
