--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arcane Mirage Player - Vector Integration</title>
-    <script defer src="https://embed.arcanemirage.com/a51a6e3b-94e9-47ee-83bb-abb7d12fac8c/e"></script>
+    <script defer src="https://embed.arcanemirage.com/65736464-4833-43ac-8d90-8a6924907b05/e"></script>
 </head>
 <body style="margin: 0; text-align: center;">
 
@@ -13,9 +13,9 @@
 
     <div id="am-container" style="width: 640px; height: 480px; margin: auto; border: 1px solid black;">
         <div id="arcane-player"
-            data-project-id="5557"
-            data-project-key="a51a6e3b-94e9-47ee-83bb-abb7d12fac8c"
-            data-token="w2nPp1pnwfd8"
+            data-project-id="5558"
+            data-project-key="65736464-4833-43ac-8d90-8a6924907b05"
+            data-token="grHzyZLFVx9U"
             data-enable-events-passthrough="true">
         </div>
     </div>
