--- a/index.html
+++ b/index.html
@@ -70,3 +70,21 @@
 
 </body>
 </html>
+
+
+fantastic
+
+got new script, write index file for it
+
+    <div id="am-container" 
+      style="width:640px; height:480px;">
+      <div id="arcane-player"
+        data-project-id="5550"
+        data-project-key="dff13bb4-c2d1-47c5-b5bd-832fdf2711f9"
+      data-token="Xzbh3RAg7LDy"
+      ></div>
+    <script 
+        src="https://embed.arcanemirage.com/dff13bb4-c2d1-47c5-b5bd-832fdf2711f9/e" 
+        defer>
+      </script>
+    </div>
